Add DOCX annotation support to the application